2009-12-18  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c: added include to
	tny-camel-common-priv.h, as it was causing a build warning that
	points to a problem that could cause crashes in 64 bit
	architectures.

2009-12-16  Sergio Villar Senin  <svillar@igalia.com>

	* camel/providers/imap/camel-imap-folder.c (imap_fetch_structure):
	when retrieving BODYSTRUCTURE data set the message cache to
	partial. This way, next time we'll recognize that the message was
	not fully downloaded.

2009-12-16  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-mime-part.c (tny_camel_mime_part_get_parts_default)
	(tny_camel_mime_part_add_part_default)
	(tny_camel_mime_part_content_type_is_default)
	(tny_camel_mime_part_get_content_type_default): do not assume that
	every mime part has content type

2009-12-14  Sergio Villar  <svillar@igalia.com>

	* Removed libtinymail-gio/libtinymail-gio-1.0.pc incorrectly added
	to repo

2009-12-12  Jose Dapena Paz  <jdapena@igalia.com>

	* On getting the decoded stream from bs mime part, reset
	to offer a stream started in 0 offset.
	* Fix error detecting embedded message/rfc822 in bs.
	* Add the bodystruct of the child to the embedded message created
	in tny_camel_bs_mime_part_get_parts, as this is the expected
	structure in tinymail.
	* Handle better in IMAP "NIL" parameter in fetch response.
	* Fix part specs of direct child of attached messages in
	bodystruct parser.
	* Refactor decode_it and decode_it_2 in _tny_camel_decode_raw_header
	* Decode properly headers in TnyCamelBsMsgHeader, to return utf8
	strings.
	* Fix decoding of rfc2047 strings in utf8 in some cases.

2009-12-12  Carl Simonson <simonsonc@gmail.com>

	Committed by Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-folder-monitor.c, libtinymail/tny-folder-monitor.h:
	Fix override of update method by removing the addition of the update
	method on TnyFolderMonitor.
