@@ -1,3 +1,10 @@
+2009-12-18  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymail-maemo/tny-maemo-conic-device.c (conic_emit_status)
+	(tny_maemo_conic_device_instance_init)
+	(tny_maemo_conic_device_finalize): do not issue pending
+	"connection-changed" signals if new ones are coming.
+
 2009-12-18  Jose Dapena Paz  <jdapena@igalia.com>
 
 	* libtinymail-camel/tny-camel-mime-part.c: added include to
